<resources>
    <string name="app_name">Notes app</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="important_checkbox">Important</string>
    <string name="Todo_checkbox">ToDo</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">Ok</string>
    <string name="sound_checkbox">On or off</string>
    <string name="settings_title">Settings</string>
    <string name="sound_title">Sound</string>
    <string name="animation_title">Animation speed</string>
    <string name="rb_fast">Fast</string>
    <string name="rb_slow">Slow</string>
    <string name="rb_none">None</string>
    <string name="idea_checkbox">Idea</string>
    <string name="content_description">1</string>
    <string name="animations_title">Animations</string>
    <string name="settings_activity_name">Settings</string>


</resources>