<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imageImportantShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_warning_black_24dp"
        android:contentDescription="@string/content_description"/>

    <ImageView
        android:id="@+id/imageToDoShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_check_box_outline_blank_black_24dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/content_description"/>

    <ImageView
        android:id="@+id/imageIdeaShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_gesture_black_24dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/content_description"/>

    <TextView
        android:id="@+id/view_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageIdeaShow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/title_hint"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/view_Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_Title"
        android:layout_marginTop="30dp"
        android:text="@string/description_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Button
        android:id="@+id/btOk"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/ok_button" />

</RelativeLayout>